--- a/test/VOC.Client.WPF.Test/VOC.Client.WPF.Test.csproj
+++ b/test/VOC.Client.WPF.Test/VOC.Client.WPF.Test.csproj
@@ -90,6 +90,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Dashboard\DashboardViewModelTest.cs" />
     <Compile Include="Main\MainViewModelTest.cs" />
     <Compile Include="Main\Navigation\NavigationServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -98,6 +99,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\src\VOC.Client.Data\VOC.Client.Data.csproj">
+      <Project>{711a2f5f-e5eb-4848-91dc-ea2d61c55a7e}</Project>
+      <Name>VOC.Client.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\src\VOC.Client.WPF\VOC.Client.WPF.csproj">
       <Project>{5ba623d2-9050-4996-a26a-f4a4941027ef}</Project>
       <Name>VOC.Client.WPF</Name>
