--- a/src/VOC.Client/VOC.Client.csproj
+++ b/src/VOC.Client/VOC.Client.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{711A2F5F-E5EB-4848-91DC-EA2D61C55A7E}</ProjectGuid>
+    <ProjectGuid>{AF6A6CDD-7643-4638-914E-31858EC2DFB9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VOC.Client.Data</RootNamespace>
-    <AssemblyName>VOC.Client.Data</AssemblyName>
+    <RootNamespace>VOC.Client</RootNamespace>
+    <AssemblyName>VOC.Client</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,8 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Games\DummyGame.cs" />
+    <Compile Include="Data\Games\DummyGameStore.cs" />
+    <Compile Include="Data\Games\ConnectionInfo.cs" />
+    <Compile Include="Data\Games\IGame.cs" />
+    <Compile Include="Data\Games\IGameStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Store\IGameStore.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
