--- a/test/VOC.Client.WPF.Test/VOC.Client.WPF.Test.csproj
+++ b/test/VOC.Client.WPF.Test/VOC.Client.WPF.Test.csproj
@@ -90,8 +90,8 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="Dashboard\DashboardViewModelTest.cs" />
-    <Compile Include="Configuration\ConfigurationViewModelTest.cs" />
+    <Compile Include="Dashboard\Overview\DashboardViewModelTest.cs" />
+    <Compile Include="Dashboard\Configuration\ConfigurationViewModelTest.cs" />
     <Compile Include="Main\MainViewModelTest.cs" />
     <Compile Include="Main\Navigation\NavigationServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
