--- a/src/VOC.Client/VOC.Client.csproj
+++ b/src/VOC.Client/VOC.Client.csproj
@@ -52,9 +52,12 @@
     <Compile Include="Dashboard\Games\ConnectionInfo.cs" />
     <Compile Include="Dashboard\Games\IGame.cs" />
     <Compile Include="Dashboard\Games\IGameStore.cs" />
+    <Compile Include="Dashboard\Lobbies\DummyLobby.cs" />
     <Compile Include="Dashboard\Lobbies\ILobby.cs" />
     <Compile Include="Dashboard\Lobbies\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Users\IUser.cs" />
+    <Compile Include="Users\User.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
