--- a/test/VOC.Client.Test/VOC.Client.Test.csproj
+++ b/test/VOC.Client.Test/VOC.Client.Test.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <Compile Include="Dashboard\Configuration\GameConfigurationTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Users\UserTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
