added userview(model) which will show/manage the current user

--- a/src/VOC.Client.WPF/VOC.Client.WPF.csproj
+++ b/src/VOC.Client.WPF/VOC.Client.WPF.csproj
@@ -140,6 +140,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Main\Users\UserView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\Buttons.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -159,6 +163,10 @@
     <Compile Include="Main\Navigation\ContentScope.cs" />
     <Compile Include="Main\Navigation\INavigationService.cs" />
     <Compile Include="Main\Navigation\NavigationService.cs" />
+    <Compile Include="Main\Users\UserView.xaml.cs">
+      <DependentUpon>UserView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Main\Users\UserViewModel.cs" />
     <Compile Include="Main\ViewModelLocator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -193,6 +201,7 @@
       <Name>VOC.Client</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
