--- a/src/VOC.Client/VOC.Client.csproj
+++ b/src/VOC.Client/VOC.Client.csproj
@@ -30,8 +30,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,6 +58,8 @@
     <Compile Include="Dashboard\Games\DummyGame.cs" />
     <Compile Include="Dashboard\Games\DummyGameStore.cs" />
     <Compile Include="Dashboard\Games\ConnectionInfo.cs" />
+    <Compile Include="Dashboard\Games\Game.cs" />
+    <Compile Include="Dashboard\Games\GameStore.cs" />
     <Compile Include="Dashboard\Games\IGame.cs" />
     <Compile Include="Dashboard\Games\IGameStore.cs" />
     <Compile Include="Dashboard\Lobbies\DummyLobby.cs" />
@@ -59,7 +69,9 @@
     <Compile Include="Users\IUser.cs" />
     <Compile Include="Users\User.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
