--- a/test/VOC.Client.Test/VOC.Client.Test.csproj
+++ b/test/VOC.Client.Test/VOC.Client.Test.csproj
@@ -67,6 +67,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Dashboard\Configuration\GameConfigurationTest.cs" />
+    <Compile Include="Dashboard\Games\GameTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Users\UserTest.cs" />
   </ItemGroup>
