Implemented dynamic board sizing

--- a/src/VOC.Client.WPF/VOC.Client.WPF.csproj
+++ b/src/VOC.Client.WPF/VOC.Client.WPF.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Game\Board\Board.xaml.cs">
       <DependentUpon>Board.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Game\Board\BoardHeightCalculator.cs" />
     <Compile Include="Game\Board\BoardViewModel.cs" />
     <Compile Include="Game\Board\Tile.xaml.cs">
       <DependentUpon>Tile.xaml</DependentUpon>
